--- a/style.css
+++ b/style.css
@@ -1009,7 +1009,7 @@ nav a:hover,
 nav a.current,
 .current-menu-item {
   text-decoration: underline;
-  text-decoration-color: var(--underline);
+  text-decoration-color: var(--underline) !important;
   text-decoration-thickness: .15rem;
 }
 
