--- a/style.css
+++ b/style.css
@@ -1006,7 +1006,7 @@ nav a:focus {
 }
 
 nav a:hover,
-nav a.current-menu-item {
+.current-menu-item {
   text-decoration: underline;
   text-decoration-color: var(--underline) !important;
   text-decoration-thickness: .15rem;
