--- a/style.css
+++ b/style.css
@@ -573,7 +573,9 @@ h1.site-title {
     line-height: 1.2;
 }
 
-.site-title a, .site-title a:visited {
+.site-title a,
+.site-title a:visited,
+.entry-footer {
     color: var(--text);
     text-decoration: none;
     background: none;
