--- a/style.css
+++ b/style.css
@@ -80,7 +80,9 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
  /* Page layout */
 
-
+ #masthead {
+   background: var(--header);
+ }
 
  .head-banner {
    margin: 0 6vw;
