--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ hr {
  }
 
  pre code {
+   font-size: 1.25rem;
    color: #ccc;
  }
 
@@ -669,6 +670,7 @@ code,
 kbd,
 tt,
 var {
+  font-size: 1.3rem;
   color: var(--code);
 }
 
