--- a/style.css
+++ b/style.css
@@ -291,6 +291,9 @@ img {
 }
 
 .wp-block-image img {
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
   border-radius: 5px;
   border: 2px solid var(--border);
 }
@@ -1078,6 +1081,8 @@ h1.site-logo a:hover {
 
 .site-avatar {
   border: none;
+  display: block;
+  margin: 0 auto;
   height: 8rem;
   width: auto;
 }
