--- a/style.css
+++ b/style.css
@@ -612,6 +612,7 @@ optgroup,
 textarea {
 	color: var(--text);
 	font-family: var(--sans-font);
+  font-size: 1.25rem
 	line-height: 1.5;
 }
 
@@ -676,7 +677,6 @@ h6 {
 
 
 p {
-  font-size: 1.25rem;
 	margin-bottom: 1.5em;
 }
 
@@ -862,7 +862,7 @@ input[type="submit"],
 	border-radius: 4px;
 	background: var(--accent);
 	color: var(--bg);
-	padding: 0.75rem 1rem;
+	padding: 0.5rem 1rem;
   text-decoration: none;
   border: none !important;
   transition: .4s;
