--- a/style.css
+++ b/style.css
@@ -860,10 +860,11 @@ input[type="reset"],
 input[type="submit"],
 .wp-block-button__link,
 .wp-block-button__link:visited {
+  font-size: 1.1rem;
 	border-radius: 4px;
 	background: var(--accent);
 	color: var(--bg);
-	padding: 0.5rem 1rem;
+	padding: 0.75rem 1rem;
   text-decoration: none;
   border: none !important;
   transition: .4s;
