--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
  body {
    font-size: 1.25rem;
+   line-height: 1.5;
    background: var(--bg);
 
  }
