--- a/style.css
+++ b/style.css
@@ -709,9 +709,7 @@ i {
 }
 
 blockquote {
-	margin-left: 2em;
-	margin-bottom: 2rem;
-	margin-top: 2rem;
+  margin: 2rem 0;
 	padding: .4rem .8rem;
 	border-left: .35rem solid var(--accent);
 	color: var(--meta);
