--- a/style.css
+++ b/style.css
@@ -971,7 +971,7 @@ textarea {
 	border: 1px solid var(--border);
   background: var(--input-bg);
 	border-radius: 3px;
-	padding: 3px;
+	padding: .5rem;
 }
 
 input[type="text"]:focus,
