--- a/style-editor.css
+++ b/style-editor.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Quirk
+Theme Name: Quirky
 Theme URI: https://kevq.uk
 Author: Kev Quirk
 Author URI: https://kevq.uk
@@ -12,16 +12,31 @@ Tags:
 */
 
 /* Global colour variables */
-:root {
-  --accent: #014b85;
-  --main: #212121;
-  --light: #444;
-  --lighter: #DDD;
-  --bg: #EEE;
-  --green: #345F41;
-  --orange: #FFA800;
-  --red: #971717;
-}
+ :root {
+     --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir, "Nimbus Sans L", Roboto, Noto, "Segoe UI", Arial, Helvetica, "Helvetica Neue", sans-serif;
+     --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+    --accent: #0D47A1;
+    --accent-light: #E3F2FD;
+    --bg: #FAFAFA;
+    --accent-bg: #E9E9E9;
+    --text: #212121;
+    --underline: #90CAF9;
+    --meta: #585858;
+    --border: lightgrey;
+    --code: #D81B60;
+    --pre: #D0D0D0;
+    --input-bg: white;
+    --wysiwyg: #D9D9D9;
+    --admin-reply: #D9D9D9;
+    --header: #212121;
+    --header-text: #fafafa;
+
+    /* Notice colours */
+    --dark-blue: #0D47A1;
+    --light-blue: #E3F2FD;
+    --dark-red: #B71C1C;
+    --light-red: #FFEBEE;
+ }
 
  /* Global Width */
  .wp-block {
@@ -50,13 +65,13 @@ table,
 figcaption,
 .wp-block-quote,
 .has-background {
-	color: var(--main);
-  font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,"Nimbus Sans L",roboto,noto,segoe ui,arial,helvetica,helvetica neue,sans-serif;
+	color: var(--text);
+  font-family: var(--sans-font);
 }
 
 .editor-block-list__layout .editor-block-list__block,
 .editor-post-title__block .editor-post-title__input,
-h1.rich-text.block-editor-rich-text__editable,
+h1.rich-text.block-edtor-rich-text__editable,
 h2.rich-text.block-editor-rich-text__editable,
 h3.rich-text.block-editor-rich-text__editable,
 h4.rich-text.block-editor-rich-text__editable,
@@ -69,47 +84,59 @@ h6.rich-text.block-editor-rich-text__editable,
 .editor-block-list__layout .editor-block-list__block p,
 .rich-text.block-editor-rich-text__editable.wp-block-paragraph,
 .block-editor-block-list__layout.is-root-container {
-  color: var(--main);
-  font-size: 1.2rem;
+  color: var(--text);
+  font-size: 1.25rem;
 }
 
 pre {
-	background: var(--main);
-	color: var(--bg);
-	border-radius: 4px;
-	margin-bottom: 1.6em;
-	max-width: 100%;
-	overflow: auto;
-	padding: 1.6em;
-	white-space: pre-wrap;
-	max-height: 650px;
+  font-family: var(--mono-font);
+  background: black !important;
+ 	border-radius: 5px;
+ 	margin-bottom: 1.6em;
+ 	max-width: 100%;
+ 	overflow: auto;
+ 	padding: 1.6em;
+ 	max-height: 650px;
+}
+
+pre code {
+  font-size: 1.25rem;
+  color: #ccc;
+}
+
+code, kbd, tt, var {
+  font-family: var(--mono-font);
+  font-size: 1.3rem;
+  color: var(--code);
 }
 
 b,
 strong {
-	font-weight: bolder;
+	font-weight: bold;
 }
 
 /** Images **/
 .wp-block-image img {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 8px;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+  border-radius: 5px;
+  border: 2px solid var(--border);
 }
 
 .wp-block-image figcaption,
 figcaption {
-	margin-top: 0;
-	color: var(--light);
+  margin-top: 0;
+	color: var(--meta);
 	font-size: 0.9rem;
 	text-align: center;
-  font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,"Nimbus Sans L",roboto,noto,segoe ui,arial,helvetica,helvetica neue,sans-serif;
 }
 
 /* Formats the feature image correctly */
 .attachment-post-thumbnail {
     width: 100%;
     margin: 1em 0 1.5em 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 2px solid var(--border);
 }
 
 /*--------------------------------------------------------------
@@ -117,54 +144,36 @@ figcaption {
 --------------------------------------------------------------*/
 h2.rich-text.block-editor-rich-text__editable {
 	margin-top: 3rem;
-	font-size: 2rem;
+	font-size: 2.25rem;
   line-height: 1.2;
 }
 
 h3.rich-text.block-editor-rich-text__editable {
   margin-top: 3rem;
-	font-size: 1.75rem;
+	font-size: 1.8rem;
   line-height: 1.2;
 }
 
 h4.rich-text.block-editor-rich-text__editable {
-	font-size: 1.5rem;
+	font-size: 1.44rem;
   line-height: 1.2;
 }
 
 h5.rich-text.block-editor-rich-text__editable {
-	font-size: 1.3rem;
+	font-size: 1.25rem;
   line-height: 1.2;
 }
 
 h6.rich-text.block-editor-rich-text__editable {
-	font-size: 1.1rem;
+	font-size: 0.96rem;
   line-height: 1.2;
 }
 
+.medium,
 .has-medium-font-size {
   font-weight: bold;
-  font-size: 1.2em !important;
+  font-size: 1.5rem !important;
   line-height: 1.3 !important;
-}
-
-.la:hover,
-.la:active,
-.la:visited,
-.lab:hover,
-.lab:active,
-.lab:visited,
-.las:hover,
-.las:active,
-.las:visited {
-    color: var(--main);
-		transition: 0.5s;
-}
-
-p.feature-credit {
-	color: var(--light);
-	font-style: italic;
-	font-size: 14px;
 }
 
 em {
@@ -172,41 +181,22 @@ em {
 }
 
 .wp-block-quote {
-  margin-left: 2em;
-	margin-bottom: 2rem;
-	margin-top: 2rem;
+  margin: 2rem auto;
 	padding: .4rem .8rem;
 	border-left: .35rem solid var(--accent);
-	color: var(--light);
+	color: var(--meta);
 	font-style: italic;
+  display: block;
 }
 
 dfn, cite, i {
-	font-style: italic;
-	font-size: 0.9rem;
+  font-size: 0.9rem;
+  color: var(--meta);
+  font-style: normal;
 }
 
-code, kbd, tt, var {
-	color: var(--bg);
-	background: var(--main);
-	padding: 2px 7px 2px 7px;
-	border-radius: 4px;
-}
-
-pre,
-code,
-kbd,
-tt,
-var {
-	font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace
-  font-size: 1em;
-}
-
-pre code:not(.hljs):not([class*="language-"]) {
-    background: var(--main);
-    color: var(--bg);
-    line-height: 1.25;
-    border-radius: 4px;
+cite em {
+  font-style: normal;
 }
 
 abbr, acronym {
@@ -229,8 +219,8 @@ td {
 
 /* Format table stripes */
 .wp-block-table.is-style-stripes tr:nth-child(odd) {
-  background: var(--lighter) !important;
-  color: var(--main) !important;
+  background: var(--accent-bg) !important;
+  color: var(--text) !important;
 }
 
 .wp-block-table.is-style-stripes tr:nth-child(even) {
@@ -238,7 +228,7 @@ td {
 }
 
 .wp-block-table table {
-    border: 1px solid var(--main) !important;
+    border: 1px solid var(--text) !important;
     border-radius: 8px;
 }
 
@@ -250,21 +240,11 @@ a,
 a:visited,
 article a,
 p.feature-credit a,
-p.feature-credit a:visited,
-.menu-items a {
-	text-decoration: none;
-  background:
-     linear-gradient(
-       to bottom, var(--accent) 0%,
-       var(--accent) 100%
-     );
-    background-position: 0 100%;
-    background-repeat: repeat-x;
-    background-size: 3px 3px;
-  transition: background-size .4s;
+p.feature-credit a:visited {
   color: var(--accent);
-  padding: 3px;
-  border-radius: 2px;
+  text-decoration-thickness: .15rem;
+  text-decoration-color: var(--underline);
+  transition: .4s;
 }
 
 a:hover,
@@ -277,9 +257,7 @@ p.feature-credit a:hover,
 p.feature-credit a:active,
 .menu-items a:hover,
 .menu-items a:active {
-	text-decoration: none;
-  color: var(--bg);
-  background-size: 4px 50px;
+	text-decoration-color: var(--accent);
 }
 
 a:focus {
@@ -290,40 +268,82 @@ a:hover, a:active {
 	outline: 0;
 }
 
+.button,
 .rich-text.block-editor-rich-text__editable.wp-block-button__link {
+  font-size: 1.1rem;
 	border-radius: 4px;
 	background: var(--accent);
 	color: var(--bg);
-	padding: 0.6rem 1rem 0.4rem;
+	padding: 0.75rem 1rem;
   text-decoration: none;
-  border: none;
+  border: none !important;
   transition: .4s;
 }
 
+.button:hover,
 .rich-text.block-editor-rich-text__editable.wp-block-button__link:hover {
-  background: var(--main);
-}
-
-
-.button, .button:visited {
-	padding: .8em .8em;
-	margin: 0 .5em 0 0;
-	background: var(--accent);
-	border-radius: 4px;
-	color: #fff;
-	font-weight: bold;
-	transition: 0.4s;
-	line-height: 3rem;
-	white-space: nowrap;
-}
-
-.button:hover, .button:active, .button:focus {
-	background: var(--main);
-	color: #fff;
+  background: var(--text);
+  color: var(--bg);
 }
 
 a.button {
 	font-weight: normal;
+}
+
+/****** Format the notice boxes ******/
+
+.notice,
+.notice-blue {
+  border-radius: 5px;
+  border: 2px solid var(--dark-blue);
+  background: var(--light-blue);
+  color: var(--dark-blue);
+  padding: 1rem 2rem;
+}
+
+.notice a,
+.notice-blue a {
+  color: var(--dark-blue);
+  text-decoration: underline;
+}
+
+.notice a:hover,
+.notice-blue a:hover {
+  text-decoration: none;
+}
+
+.notice-red {
+  border-radius: 5px;
+  border: 2px solid var(--dark-red);
+  background: var(--light-red);
+  color: var(--dark-red);
+  padding: 1rem 2rem;
+}
+
+.notice-red a {
+  color: var(--dark-red);
+  text-decoration: underline;
+}
+
+.notice-red a:hover {
+  text-decoration: none;
+}
+
+/**** 100 Days Banner ****/
+
+.hundred-days,
+.banner {
+  background: var(--accent-bg);
+  text-align: center;
+  font-weight: bold;
+  padding: 1rem .5rem;
+  border: 2px solid var(--text);
+  border-radius: 5px;
+}
+
+.hundred-days-number {
+  font-size: 1.4rem;
+  color: var(--code);
 }
 
 /** Custom colours for Gutenberg editor **/
