--- a/style.css
+++ b/style.css
@@ -1070,6 +1070,10 @@ nav.navigation.posts-navigation a:hover {
   text-decoration: none;
 }
 
+.sub-menu {
+  
+}
+
 /****** Header elements ******/
 h1.site-logo {
   font-size: 2rem;
