--- a/style.css
+++ b/style.css
@@ -1082,7 +1082,9 @@ nav.navigation.posts-navigation a:hover {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
+  position: absolute;
+  top: 0px;
+  right: 0px;
   display: inline-block;
 }
 
