--- a/style.css
+++ b/style.css
@@ -1083,7 +1083,7 @@ nav.navigation.posts-navigation a:hover {
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: absolute;
-  top: 0px;
+  top: 2.4rem;
   right: 0px;
   display: inline-block;
 }
