--- a/style.css
+++ b/style.css
@@ -1054,6 +1054,9 @@ nav a:hover,
   .hide-tablet {
     display: none;
   }
+  h1.site-logo {
+    margin: 0 0 0 .5rem;
+  }
 }
 
 @media only screen and (max-width: 640px) {
