--- a/style.css
+++ b/style.css
@@ -1055,7 +1055,7 @@ nav a:hover,
     display: none;
   }
   h1.site-logo {
-    margin: 0 0 0 .5rem;
+    margin: 0 0 0 .5rem !important;
   }
 }
 
