--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     --border: lightgrey;
     --code: #D81B60;
     --pre: #D0D0D0;
+    --pre-bg: #1A1A1A;
     --input-bg: white;
     --wysiwyg: #D9D9D9;
     --admin-reply: #D9D9D9;
@@ -204,7 +205,7 @@ hr {
  */
  pre {
  	font-family: var(--mono-font);
-  background: black !important;
+  background: var(--pre-bg) !important;
  	border-radius: 5px;
  	margin-bottom: 1.6em;
  	max-width: 100%;
