--- a/style.css
+++ b/style.css
@@ -1612,27 +1612,30 @@ p.has-background {
 /* Format the old posts notice */
 .old-notice {
     padding: 20px 30px;
-    background-color: var(--accent);
+    background: var(--light-blue);
+    border: 2px solid var(--dark-blue);
     margin: 1em 0;
-    color: var(--bg);
+    color: var(--dark-blue);
     border-radius: 4px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
 }
 
 .old-notice a, .old-notice a:visited {
-		color: var(--bg);
-		border-color: var(--bg);
-    background: none;
-    border-bottom: 2px solid var(--bg);
-    border-radius: 0;
-    padding: 0;
+	color: var(--dark-blue);
+	text-decoration-color: var(--dark-blue);
 }
 
-.old-notice a:hover, .old-notice a:active {
-		color: var(--bg);
-		border-color: var(--bg);
-    border-bottom: 2px dotted var(--bg);
+/* Format old notice in dark mode */
+@media (prefers-color-scheme: dark) {
+    .old-notice {
+        background: var(--accent);
+        color: var(--bg);
+        border: var(--accent);
+    }
+    .old-notice a, .old-notice a:visited {
+	    color: var(--bg);
+	    text-decoration-color: var(--bg);
+    }
 }
 
 /* Guestbook formatting */
