--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
       --bg: #212121;
       --accent-bg: #2B2B2B;
       --text: #DCDCDC;
-      --underline: #FFD063;
+      --underline: #ffd87d;
       --meta: #ABABAB;
       --code: #F06292;
       --input-bg: #333;
