--- a/style.css
+++ b/style.css
@@ -112,6 +112,15 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
  }
 
+ .newsletter-banner {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+}
+
 
  /* Define colours for auto dark mode */
 @media (prefers-color-scheme: dark) {
