--- a/style.css
+++ b/style.css
@@ -544,6 +544,11 @@ input {
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
+ padding: 2rem 0 1rem 0;
+}
+
+.newsletter-banner h1 {
+  margin: 0;
 }
 
 .newsletter-banner a {
