--- a/style.css
+++ b/style.css
@@ -556,19 +556,24 @@ input {
   text-decoration: none;
 }
 
-/* Hide title on newsletter page */
+/* Change header on newsletter page 4390 is staging, 2469 is live */
 .page-id-4390 h1.entry-title,
-.page-id-4390 nav {
+.page-id-4390 nav,
+.page-id-2469 h1.entry-title,
+.page-id-2469 nav {
   display: none;
 }
 
 .page-id-4390 #masthead,
-.page-id-4390 .head-banner {
+.page-id-4390 .head-banner,
+.page-id-2469 #masthead,
+.page-id-2469 .head-banner {
   background: var(--accent);
 }
 
-.page-id-4390 .newsletter-banner {
-  padding: 0 0 1.5rem 0;
+.page-id-4390 .newsletter-banner,
+.page-id-2469 .newsletter-banner {
+  padding: 0 0 2rem 0;
 }
 
 /**
