--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ input {
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
- padding: 3rem 0 1.5rem 0;
+ padding: 0 .5rem 2rem .5rem;
 }
 
 .newsletter-banner h1 {
@@ -569,11 +569,6 @@ input {
 .page-id-2469 #masthead,
 .page-id-2469 .head-banner {
   background: var(--accent);
-}
-
-.page-id-4390 .newsletter-banner,
-.page-id-2469 .newsletter-banner {
-  padding: 0 0 2rem 0;
 }
 
 /**
