--- a/style.css
+++ b/style.css
@@ -728,6 +728,11 @@ p {
   line-height: 1.3;
 }
 
+.small {
+  font-size: .9rem;
+  color: var(--meta);
+}
+
 .sub-heading {
   color: var(--meta);
   font-size: 1.5rem;
