--- a/style.css
+++ b/style.css
@@ -521,10 +521,10 @@ input {
 
 /* Subscribe form on posts */
 .subscribe-form {
-  background: var(--accent-bg);
+  background: var(--accent-light);
+  border: 2px solid var(--accent);
+  border-radius: 5px;
   padding: 25px;
-  outline: dashed 2px var(--text);
-  outline-offset: -8px;
   margin: 1em 0;
 }
 
