--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     --accent: #0D47A1;
     --accent-light: #E3F2FD;
     --bg: #FAFAFA;
-    --accent-bg: #E9E9E9;
+    --accent-bg: #F5F7FF;
     --text: #212121;
     --underline: #90CAF9;
     --meta: #585858;
