--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ input {
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
- padding: 3rem 0 2rem 0;
+ padding: 0 0 2rem 0;
 }
 
 .newsletter-banner h1 {
@@ -565,6 +565,13 @@ input {
 .page-id-4390 h1.entry-title,
 .page-id-2469 h1.entry-title {
   display: none;
+}
+
+.page-id-4390 #masthead,
+.page-id-4390 .head-banner,
+.page-id-2469 #masthead,
+.page-id-2469 .head-banner {
+  background: var(--accent);
 }
 
 /**
