--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ input {
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
- padding: 0 0 2rem 0;
+ padding: 2rem 0 2rem 0;
 }
 
 .newsletter-banner h1 {
