--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     --pre: #D0D0D0;
     --pre-bg: #1A1A1A;
     --input-bg: white;
-    --wysiwyg: #D9D9D9;
-    --admin-reply: #D9D9D9;
+    --wysiwyg: #CFE9FC;
+    --admin-reply: #CFE9FC;
     --header: #212121;
     --header-text: #fafafa;
 
@@ -1738,7 +1738,7 @@ i.gb-moderator {
 }
 
 .gwolle-gb .gb-entry-admin_reply, .gwolle-gb .gb-entry-admin-reply {
-	border-left: 3px solid var(--text) !important;
+	border-left: .35rem solid var(--accent) !important;
 	background: var(--admin-reply) !important;
 	margin-right: .5rem !important;
 }
