--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     --pre: #D0D0D0;
     --pre-bg: #1A1A1A;
     --input-bg: white;
-    --wysiwyg: #CFE9FC;
-    --admin-reply: #CFE9FC;
+    --wysiwyg: #eaeeff;
+    --admin-reply: #eaeeff;
     --header: #212121;
     --header-text: #fafafa;
 
