--- a/style.css
+++ b/style.css
@@ -583,7 +583,7 @@ input {
   .page-id-2469 .head-banner a,
   .page-id-4390 .head-banner nav a,
   .page-id-2469 .head-banner nav a {
-    color: var(--text);
+    color: var(--bg);
   }
 }
 
