--- a/style.css
+++ b/style.css
@@ -582,7 +582,8 @@ input {
   .page-id-4390 .head-banner a,
   .page-id-2469 .head-banner a,
   .page-id-4390 .head-banner nav a,
-  .page-id-2469 .head-banner nav a {
+  .page-id-2469 .head-banner nav a,
+  h1.site-logo a {
     color: var(--bg);
   }
 }
