--- a/style.css
+++ b/style.css
@@ -565,6 +565,13 @@ input {
   text-decoration: none;
 }
 
+/* Format the blogroll banners */
+.blorgoll-banner {
+  background: var(--accent-bg);
+  border: 2px solid var(--accent);
+  border-radius: 5px;
+}
+
 /* Change header on newsletter page 4390 is staging, 2469 is live */
 .page-id-4390 h1.entry-title,
 .page-id-2469 h1.entry-title {
