--- a/style.css
+++ b/style.css
@@ -584,7 +584,7 @@ input {
 
 @media (prefers-color-scheme: dark) {
   .blogroll-banner-fav {
-    background: #FFF7A9;
+    background: #FFB300;
   }
 }
 
