--- a/style.css
+++ b/style.css
@@ -569,8 +569,9 @@ input {
 .blogroll-banner {
   background: var(--accent-bg);
   border: 2px solid var(--accent);
+  width: 60%;
   border-radius: 5px;
-  margin: 1rem 0;
+  margin: 1rem auto;
   padding: .5rem;
 }
 
