--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
      --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
     --accent: #076678;
     --accent-light: #427b58;
-    --bg: #f9f5d7;
+    --bg: #FAFAFA;
     --accent-bg: #F5F7FF;
     --text: #212121;
     --underline: #90CAF9;
