--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ img {
 .wp-block-image img {
   max-width: 100%;
   display: block;
-  margin: 0 auto;
+  margin: 2rem auto;
   border-radius: 5px;
   border: 2px solid var(--border);
 }
