--- a/style.css
+++ b/style.css
@@ -311,10 +311,7 @@ img {
 
 /* Formats the feature image correctly */
 .attachment-post-thumbnail {
-    width: 100%;
-    margin: 1em 0 1.5em 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 4px;
+    display: none;
 }
 
 
