--- a/style.css
+++ b/style.css
@@ -1411,17 +1411,18 @@ h1.site-logo a:hover {
 /* 512KB Club banner in footer */
 .kb-club a {
 	text-decoration: none;
+  color: #FBC02D !important;
 }
 
 .kb-club-no-bg {
-	border: 2px solid var(--text);
+	border: 2px solid #FBC02D;
 	padding: .5rem 1rem;
 }
 
 .kb-club-bg {
-	background: var(--text);
-	border: 2px solid var(--text);
-	color: var(--bg);;
+	background: #FBC02D;
+	border: 2px solid #FBC02D;
+	color: #212121;
 	padding: .5rem 1rem;
 }
 
