--- a/style.css
+++ b/style.css
@@ -1417,14 +1417,14 @@ h1.site-logo a:hover {
 
 .kb-club-no-bg {
 	border: 2px solid #FBC02D;
-	padding: .5rem 1rem;
+	padding: .25rem .5rem;
 }
 
 .kb-club-bg {
 	background: #FBC02D;
 	border: 2px solid #FBC02D;
 	color: #212121;
-	padding: .5rem 1rem;
+	padding: .25rem .5rem;
 }
 
 /*--------------------------------------------------------------
