--- a/style.css
+++ b/style.css
@@ -1428,8 +1428,7 @@ h1.site-logo a:hover {
 }
 
 .kb-club-no-bg:hover {
-	border: 2px solid var(--text);
-	padding: .25rem .5rem;
+	background: #FFF176;
 }
 
 /*--------------------------------------------------------------
