--- a/style.css
+++ b/style.css
@@ -1427,8 +1427,10 @@ h1.site-logo a:hover {
 	padding: .25rem .5rem;
 }
 
-.kb-club-no-bg:hover {
+.kb-club a:hover {
+  .kb-club-no-bg {
 	background: #FFF176;
+  }
 }
 
 /*--------------------------------------------------------------
