--- a/style.css
+++ b/style.css
@@ -1415,6 +1415,10 @@ h1.site-logo a:hover {
   font-weight: bold;
 }
 
+.kb-club a:hover {
+  background: #FFF176;
+}
+
 .kb-club-no-bg {
 	border: 2px solid #FBC02D;
 	padding: .25rem .5rem;
