--- a/style.css
+++ b/style.css
@@ -1416,6 +1416,12 @@ h1.site-logo a:hover {
   padding: .25rem 0;
 }
 
+@media (prefers-color-scheme: dark) {
+  .kb-club a {
+    color: #FBC02D !important;
+  }
+}
+
 .kb-club a:hover {
   background: #FFF176;
 }
