--- a/style.css
+++ b/style.css
@@ -1418,7 +1418,7 @@ h1.site-logo a:hover {
 
 @media (prefers-color-scheme: dark) {
   .kb-club a {
-    color: #FBC02D !important;
+    color: #64B5F6 !important;
   }
 
   .kb-club a:hover {
@@ -1427,17 +1427,17 @@ h1.site-logo a:hover {
 }
 
 .kb-club a:hover {
-  background: #FFF176;
+  background: #BBDEFB;
 }
 
 .kb-club-no-bg {
-	border: 2px solid #FBC02D;
+	border: 2px solid #64B5F6;
 	padding: .25rem .5rem;
 }
 
 .kb-club-bg {
-	background: #FBC02D;
-	border: 2px solid #FBC02D;
+	background: #64B5F6;
+	border: 2px solid #64B5F6;
 	color: #212121;
 	padding: .25rem .5rem;
 }
