search button and iOS form styling

--- a/style.css
+++ b/style.css
@@ -975,6 +975,17 @@ p.feature-credit a:active,
 
 /* Forms
 --------------------------------------------- */
+/* Stop iOS formatting field elements */
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
 button,
 input[type="button"],
 input[type="reset"],
@@ -992,21 +1003,11 @@ input[type="submit"],
   transition: .4s;
 }
 
-/* Stop iOS formatting field elements */
-textarea,
-input.text,
-input[type="text"],
-input[type="button"],
-input[type="submit"],
-.input-checkbox {
-  -webkit-appearance: none;
-  border-radius: 0;
-}
-
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover,
+.wp-block-search__button:hover,
 .wp-block-button__link:active,
 .wp-block-button__link:focus,
 .wp-block-button__link:hover {
