--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
  #page { /* Default content div */
  	background: var(--bg);
+  max-width: 1240px;
  }
 
  body {
