--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  }
 
  .head-banner {
-   margin: 0 6vw;
+   margin: 0 auto;
+   max-width: 1240px;
    background: var(--header);
    position: relative;
    display: flex;
