--- a/style.css
+++ b/style.css
@@ -1414,22 +1414,10 @@ h1.site-logo a:hover {
 
 .widget-area {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  max-width: 1240px;
+  grid-template-columns: repeat(auto-fit minmax(400px, 1fr));
+  max-width: 1200px;
   margin: 0 auto;
   text-align: left;
-}
-
-@media only screen and (max-width: 581px) {
-  .widget-area {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media only screen and (max-width: 481px) {
-  .widget-area {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
 
 /*--------------------------------------------------------------
