--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
  .head-banner {
    margin: 0 auto;
-   max-width: 1200px;
+   max-width: 1240px;
    background: var(--header);
    position: relative;
    display: flex;
@@ -1413,20 +1413,11 @@ h1.site-logo a:hover {
 }
 
 .widget-area {
-  display: flex;
-  justify-content: center;
-}
-
-.widgets {
   display: grid;
-  grid-template-columns: repeat(auto-fit minmax(400px, 1fr));
-  width: 1200px;
-}
-
-.footer-widget {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  max-width: 1240px;
+  margin: 0 auto;
+  text-align: left;
 }
 
 /*--------------------------------------------------------------
